Added parse directive for specifying quote style in use